--- a/main.html
+++ b/main.html
@@ -41,6 +41,14 @@
         <div id="box">
             <p>EXPLORE</p>
         </div>
+        <div id="auto-scroll">
+            <a href="#">
+                <div class="scroll-up"></div>
+            </a>
+            <a href="#second">
+                <div class="scroll-down"></div>
+            </a>
+        </div>
     </div>
     <div id="second" class="">
         <section>
@@ -54,6 +62,14 @@
             <img src="images/circuit.jpg">
             <div id="linetwo"></div>
         </article>
+        <div id="auto-scroll">
+            <a href="#first">
+                <div class="scroll-up"></div>
+            </a>
+            <a href="#fourth">
+                <div class="scroll-down"></div>
+            </a>
+        </div>
     </div>
     <div id="third" class="">
         
@@ -69,6 +85,14 @@
             <span></span>
             <span></span>
             <span></span>
+        </div>
+        <div id="auto-scroll">
+            <a href="#second">
+                <div class="scroll-up"></div>
+            </a>
+            <a href="#sixth">
+                <div class="scroll-down"></div>
+            </a>
         </div>
     </div>
     <div id="fifth" class="">
@@ -110,6 +134,14 @@
                 </div>
             </a>
         </div>
+        <div id="auto-scroll">
+            <a href="#fourth">
+                <div class="scroll-up"></div>
+            </a>
+            <a href="#ninth">
+                <div class="scroll-down"></div>
+            </a>
+        </div>
     </div>
     <div id="eighth" class="">
 
@@ -138,6 +170,14 @@
                     <li>Money that the creator should earn is gained by someone who didn’t help in any of the work.</li>
                 </ol>
             </div>
+        </div>
+        <div id="auto-scroll">
+            <a href="#seveth">
+                <div class="scroll-up"></div>
+            </a>
+            <a href="#eleventh">
+                <div class="scroll-down"></div>
+            </a>
         </div>
     </div>
     <div id="tenth" class="">
@@ -220,6 +260,14 @@
             </div>
         </div>
     </div>
+    <div id="auto-scroll">
+            <a href="#ninth">
+                <div class="scroll-up"></div>
+            </a>
+            <a href="#eleventh">
+                <div class="scroll-down"></div>
+            </a>
+        </div>
     </div>
 </body>
 <script src="http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
